# docs/swagger/swagger.yaml
@@ -26,56 +26,59 @@ tags:
 schemes: 
   - http
   - https
-  
-/register:
+paths:
+  /register:
     post:
       tags:
         - user
       summary: 注册用户
       description: 直接输入账号和密码注册
       parameters:
-        - name: data
+        - name: QQaccount
           in: body
-          description: post data
+          description: QQ账号
+        - name: password
+          in: body
+          description: 账号密码
           schema:
             required:
-              - account
+              - QQaccount
               - password
             properties:
-              name:
+              QQaccount:
                 type: string
-                description: 用户昵称
+                description: QQ账号
               password:
                 type: string
-                description: 密码
+                description: 账号密码
       responses: 
         200:
           description: 注册成功,留住用户id
           schema:
             properties:
-              account: 
+              QQaccount: 
                 type: string
         400:
           description: 参数不全,客户端语法有问题
         401:
           description: 用户名或密码错误
           
-/login: 
+  /login: 
     post:
       tags: 
         - user
       summary: 登录
-      description: 账号密码登录
+      description: 用户输入账号密码登录
       parameters:
-        - name: data
+        - name: QQaccount
           in: body
-          description: post data
+          description: QQ账号
           schema:
             required:  
-              - account: 
+              - QQaccount: 
               - password:
             properties:
-              account:
+              QQaccount:
                 type: string
                 description: 用户账号
               password:
@@ -88,35 +91,51 @@ schemes:
             properties:
               token:
                 type: string
-                description: 传一个token保留,token就是account
+                description: 通过给前端一个token，下次登录时，不用前端再次输入账号和密码
         400:
           description: 参数不全
         401:
           description: 用户名或密码错误
           
           
-/idea:
+  /idea/{user_id}:
     post: 
       tags: 
         - idea
       summary: 新增想法
       parameters:
         - $ref: "#/parameters/token"
-        - name: data
+        - name: user_id
+          in: path
+          required: true
+          type: string
+        - name: content
           in: body
+        - name: likes_sum
+          in: body
+        - name: collection_sum
+          in: body
+        - name: comments_sum
+          in: body
+        - name: title
+          in: body
+        - name: picture
+          in: body 
           schema:
             properties:
               title: 
                 type: string
+                description: 想法标题
               content:
                 type: string
+                description: 想法内容
               picture:
                 type: string
+                description: 配图
               user_id: 
                 type: string
-              publisher_time:
-                type: string
-                description: 新增想法内容
+                description: 用户id
+                
       responses:
         200:
           description: 发布成功
@@ -124,33 +143,67 @@ schemes:
             properties:
               user_id:
                 type: string
-              time:
+              title: 
+                type: string
+              content:
+                type: string
+              picture:
                 type: string
         400:
           description: 参数不全
         401:
           description: token错了, 权限不够
+          
+          
+  /idea/{user_id}/idea_delete:   
+    put: 
+      tags: 
+        - idea
+      summary: 删除想法
+      parameters: 
+        - $ref: "#/parameters/token"
+        - name: user_id
+          in: path
+          required: true
+          type: string
+        - name: idea_id
+          in: body
+          schema:
+            type: array
+            items:
+              properties:
+                idea_id:
+                  type: integer
+                  description: 想法的ID
+      responses:
+        200:
+          description: 删除成功
+        404:
+          description: 删除失败
+        401:
+          description: 请先登录
    
-/like:
+  /like/{user_id}/idea:
     post:
       tag:
         -like
       summary: 新增想法点赞记录
       parameters:
         - $ref: "#/parameters/token"
-        - name: data
+        - name: user_id
+          in: path
+          required: true
+          type: string
+        - name: idea_id
           in: body
-           schema:
+          schema:
             properties:
-              id:
-                type: number
               idea_id:
                 type: number
+                description: 想法的id
               beliked_id:
                 type: string
-              likers_id:
-                type: string
-                description: 想法点赞记录
+                description: 被点赞者的id
       responses:
         200:
           description: 点赞成功
@@ -158,26 +211,30 @@ schemes:
           description: 点赞失败
         401:
           description: 请先登陆
-        
+   
+  /like/{user_id}/comment:     
     post:
       tag:
         -like
       summary: 新增评论点赞记录
       parameters:
         - $ref: "#/parameters/token"
-        - name: data
+        - name: user_id
+          in: path
+          required: true
+          type: string
+        - name: comment_id
           in: body
-           schema:
+        - beliked_id:
+          in: body
+          schema:
             properties:
-              id:
-                type: number
               comment_id:
                 type: number
+                description: 评论的ID
               beliked_id:
                 type: string
-              likers_id:
-                type: string
-                description: 想法点赞记录
+                description: 被点赞者的ID
       responses:
         200:
           description: 点赞成功
@@ -188,8 +245,8 @@ schemes:
         
         
         
-        
-    put: 
+  /like/{user_id}/idea_delete:  
+    delete: 
       tags: 
         - like
       summary: 删除想法点赞记录
@@ -199,14 +256,22 @@ schemes:
           in: path
           required: true
           type: string
-        - name: like_id
+        - name: idea_id
+          in: body
+        - name: belike_id
           in: body
           schema:
             type: array
             items:
               properties:
-                user_id:
+                idea_id:
                   type: string
+                  description: 想法的ID
+                beliked_id:
+                type: string
+                description: 被点赞者的ID
+                
+                
       responses:
         200:
           description: 删除成功
@@ -215,7 +280,7 @@ schemes:
         401:
           description: 请先登录
           
-                        
+  /like/{user_id}/comment_delete:                  
     put: 
       tags: 
         - like
@@ -226,14 +291,21 @@ schemes:
           in: path
           required: true
           type: string
-        - name: like_id
+        - name: beliked_id
+          in: body
+        - name: comment_id
           in: body
           schema:
             type: array
             items:
               properties:
-                user_id:
+                comment_id:
                   type: string
+                  description: 评论的ID
+                beliked_id:
+                  type: string
+                  description: 被点赞者的ID
+                
       responses:
         200:
           description: 删除成功
@@ -247,21 +319,33 @@ schemes:
           
           
     
-/comment:        
+  /comment/{user_id}:     
     post:
       tags:
         - comment
-      summary: 新增评论记录
+      summary: 新增评论
       parameters: 
         - $ref: "#/parameters/token"
+        - name: user_id
+          in: path
+          required: true
+          type: string
         - name: content
           in: body
+          description: 评论内容
           required: true
-        - name: release_date
+        - name: commented_id
           in: body
+          description: 被评论的用户ID
           required: true
           schema:
             properties: 
+              content :
+                  type: string
+                  description: 评论的内容
+                commented_id:
+                  type: string
+                  description: 被评论者的ID
               
       responses:
         200:
@@ -271,7 +355,7 @@ schemes:
         401:
           description: 请先登录
           
-          
+  /comment/{user_id}/comment_delete:   
     put: 
       tags: 
         - comment
@@ -288,8 +372,9 @@ schemes:
             type: array
             items:
               properties:
-                album_id:
+                comment_id:
                   type: integer
+                  description: 评论的ID
       responses:
         200:
           description: 删除成功
@@ -297,7 +382,8 @@ schemes:
           description: 删除失败
         401:
           description: 请先登录
-/user:
+
+  /user/{user_id}/collection:
     get:
       tags: 
         - user
@@ -319,7 +405,7 @@ schemes:
           description: 没有该资源
         401:
           description: 请先登陆
-    
+  /user/{user_id}/my_idea:
     get:
       tags: 
         - user
@@ -337,8 +423,9 @@ schemes:
             items:
               $ref: "#/definitions/user_idea"
         404:
-          description: 没有该资源        
-    
+          description: 没有该资源   
+          
+  /user/{user_id}/my_information:  
     get:
       tags:
         - user
@@ -349,6 +436,18 @@ schemes:
           in: path
           required: true
           type: string
+        - name: nickname
+          in: body
+          required: true
+          type: string
+        - name: avater
+          in: body
+          required: true
+          type: string
+        - name: energy
+          in: body
+          required: true
+          type: number
       responses:
         200:
           description: 获取成功
@@ -366,7 +465,8 @@ schemes:
           description: 没有该资源
         401:
           description: token错误，没有权限
-    
+          
+  /user/{user_id}/my_comment:
     get:
       tags:
         - user
@@ -376,16 +476,21 @@ schemes:
           in: path
           required: true
           type: string
+         - name: comment_id
+          in: body
+          required: true
+          type: string 
       responses:
         200:
           description: 获取成功
           schema:   
             type: array
             items:
-              $ref: "#/definitions/user_review"
+              $ref: "#/definitions/user_comment"
         404:
           description: 没有该资源    
-    
+          
+  /user/{user_id}/information_change:
     put:
       tags:
         - user
@@ -396,7 +501,11 @@ schemes:
           in: path
           required: true
           type: string
-        - name: data
+        - name: nickname
+          in: body
+        - name: avater
+          in: body
+        - password:
           in: body
           schema:
             properties:
@@ -407,64 +516,14 @@ schemes:
                 description: 头像图片的url
               nickname:
                 type: string 
+              password:
+                type: string
       responses:
         200:
           description: OK
         401:
           description: token错了,权限不够
-    
-    put: 
-      tags: 
-        - user
-      summary: 删除想法
-      parameters: 
-        - $ref: "#/parameters/token"
-        - name: user_id
-          in: path
-          required: true
-          type: string
-        - name: idea_id
-          in: body
-          schema:
-            type: array
-            items:
-              properties:
-           
-      responses:
-        200:
-          description: 删除成功
-        401:
-          description: token错误，没有权限 
-          
-    put: 
-      tags: 
-        - user
-      summary: 删除评论
-      parameters: 
-        - $ref: "#/parameters/token"
-        - name: user_id
-          in: path
-          required: true
-          type: string
-        - name: comment_id
-          in: body
-          schema:
-            type: array
-            items:
-              properties:
-           
-      responses:
-        200:
-          description: 删除成功
-        401:
-          description: token错误，没有权限  
-    
-    
-          
-          
-      
-      
-/searcher:
+  /searcher:
     get:
       tags: 
         - searcher
@@ -511,15 +570,19 @@ definitions:
         type: integer
       title: 
         type: string
+        description: 想法标题
       content:
         type: string
+        description: 内容
       publiser_time: 
         type: string
+        description: 发布时间
       picture:
         type: string
-        description: 传照片的url
+        description: 配图
       comment_sum:
         type: integer
+        description: 评论数
       like_sum:
         type: integer
         description: 点赞数    
@@ -627,7 +690,8 @@ definitions:
           
 parameters:
   token:
-      name: token
+      name: token 
       in: header
       required: true
       type: string  
+            
